# roBERT

./: .gitignore  ARCHITECTURE.md  BUGFIX.md  CHECKLIST_SPAN_EXTRACTION.md  DATASET_ANALYSIS_REPORT.md  Makefile  QUICKSTART_GPT4MINI_WINDOWS.md  README.md  REORGANIZATION_PLAN.md  RIEPILOGO_FINALE.md  execute_reorganization.sh  label_model.py  masked_model.py  ontology.json  pyproject.toml  train_hier_masked.py  train_label.py
.claude/: settings.local.json
LOOKATME/: LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
LOOKATME/configs/: hier.json  tapt.json
LOOKATME/data/metadata/: stats.json
LOOKATME/data/metadata/label_index/: cat.json  super.json
LOOKATME/data/metadata/splits/: split_seed42.json
LOOKATME/data/processed/classification/cat/: test.jsonl  train.jsonl
LOOKATME/data/processed/classification/super/: test.jsonl  train.jsonl
LOOKATME/data/processed/hier/: test.jsonl  train.jsonl
LOOKATME/data/processed/mlm/: train.txt
LOOKATME/data/raw/keynote_jsonl/: sample.jsonl
LOOKATME/docker/: Dockerfile.cpu  Dockerfile.cuda
LOOKATME/pack/current/: pack.json
LOOKATME/pack/v0/: categories.json  catmap.json  contexts.json  extractors.json  formulas.json  keynote.schema.json  manifest.json  profiles.json  registry.json  templates.json  validators.json  views.json
LOOKATME/src/robimb/: __init__.py
LOOKATME/src/robimb/cli/: main.py
LOOKATME/src/robimb/core/: pack_tools.py
LOOKATME/src/robimb/core/schemas/: categories.schema.json  contexts.schema.json  formulas.schema.json  templates.schema.json  validators.schema.json  views.schema.json
LOOKATME/src/robimb/data/: convert.py  io.py
LOOKATME/src/robimb/eval/: metrics.py  plots.py
LOOKATME/src/robimb/features/: extractors.py
LOOKATME/src/robimb/inference/: calibration.py  pipeline.py  predict_properties.py
LOOKATME/src/robimb/models/: encoders.py  heads.py
LOOKATME/src/robimb/training/: hier.py  label.py  mlm.py  seed.py  tapt.py  utils.py
LOOKATME/tests/: test_extractors.py
data/: category_property_map.json  contexts.json  extracted_properties.jsonl  extracted_properties_fixed.jsonl  extractors_patterns.json  formulas.json  prod_cat_property_map.json  prod_categories.json  prod_contexts.json  prod_extractors_patterns.json  prod_formulas.json  prod_profiles.json  prod_properties_registry.json  prod_templates_descriptions.json  properties_registry_extended.json  properties_registry_modular.json
docs/: README.md  REORGANIZATION_SUMMARY.md  ROADMAP.md  SPAN_EXTRACTION_SETUP.md  SPAN_EXTRACTOR.md  SYSTEM_OVERVIEW.md  changelog.md  cli_convert.md  cli_evaluate.md  cli_extract.md  cli_pack.md  cli_pack_merge.md  cli_train.md  cli_validate.md  core_knowledge_pack.md  dataset_preparation.md  extraction_checklist.md  index.md  inference_pipeline.md  label_maps.md  label_model.md  lim_dataset_coverage.md  masked_model.md  ontology_masks.md  overview.md  production_resource_setup.md  property_extraction.md  reporting.md  (+7 more)
(+488 files in other folders)
