[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robimb"
version = "0.2.0"
description = "Industrial-grade BIM NLP pipeline with domain-specific TAPT and hierarchical classifiers"
readme = "README.md"
authors = [
  { name = "atipiqal" }
]
license = { text = "Proprietary" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "torch>=2.1",
  "transformers>=4.41",
  "datasets>=2.16",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "typer>=0.9",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "jsonschema>=4.21",
  "aiohttp>=3.9",
  "requests>=2.31",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "typer[all]>=0.9",
]

[project.urls]
"Repository" = "https://github.com/atipiqal/roBERT"

[project.scripts]
robimb = "robimb.cli.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
