
[project]
name = "robimb"
version = "0.0.1"
description = "Computi & classificazione BIM assistita"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "transformers==4.41.2",
  "datasets==2.20.0",
  "accelerate==0.33.0",
  "evaluate==0.4.2",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "scikit-learn==1.4.2",
  "huggingface-hub==0.23.4",
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pyyaml==6.0.1",
  "rich>=13.7.1",
  "tqdm>=4.66.1",
  "pytest==8.3.2",
  "jsonschema==4.23.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
robimb = "robimb.cli.main:app"
